<?xml version="1.0" encoding="UTF-8"?>
<!--
 Licensed to the Apache Software Foundation (ASF) under one or more
 contributor license agreements.  See the NOTICE file distributed with
 this work for additional information regarding copyright ownership.
 The ASF licenses this file to You under the Apache License, Version 2.0
 (the "License"); you may not use this file except in compliance with
 the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <!-- ====================================================================== -->
  <!-- P R O J E C T  D E S C R I P T I O N                                   -->
  <!-- ====================================================================== -->

  <groupId>com.maxar.rda</groupId>
  <artifactId>commons-imaging-bigtiff</artifactId>
  <name>Apache Commons Imaging</name>
  <version>1.3.5-SNAPSHOT</version>

  <!--
    Keep the description on a single line. Otherwise Maven might generate
    a corrupted MANIFEST.MF (see http://jira.codehaus.org/browse/MJAR-4)
   -->
  <description>Apache Commons Imaging (previously Sanselan) is a pure-Java image library.</description>
  <url>https://commons.apache.org/proper/commons-imaging/</url>

  <properties>
    <argLine>-Xmx512m</argLine>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <checkstyle.plugin.version>3.1.12</checkstyle.plugin.version>
  </properties>


  <build>
    <defaultGoal>clean verify checkstyle:check findbugs:check javadoc:javadoc</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>animal-sniffer-maven-plugin</artifactId>
        <version>1.21</version>
        <configuration>
          <ignores>
            <ignore>java.math.BigInteger</ignore>
          </ignores>
        </configuration>
        <executions>
          <execution>
            <id>check-java-api</id>
            <phase>test</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-publish-plugin</artifactId>
        <configuration>
          <ignorePathsToDelete>
            <ignorePathToDelete>javadocs</ignorePathToDelete>
          </ignorePathsToDelete>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle.plugin.version}</version>
        <configuration>
          <configLocation>${basedir}/checkstyle.xml</configLocation>
          <suppressionsLocation>${basedir}/checkstyle-suppressions.xml</suppressionsLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <enableRulesSummary>false</enableRulesSummary>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-scm-publish-plugin</artifactId>
          <configuration>
            <ignorePathsToDelete>
              <ignorePathToDelete>javadocs**</ignorePathToDelete>
            </ignorePathsToDelete>
          </configuration>
        </plugin>     
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <excludePackageNames>com.maxar.rda.imaging.formats.psd.*:com.maxar.rda.imaging.formats.png.*</excludePackageNames>
            <source>17</source>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.rat</groupId>
          <artifactId>apache-rat-plugin</artifactId>
          <configuration>
            <excludes>
              <exclude>src/test/data/**/*.xpm</exclude>
              <exclude>src/test/data/**/*.pam</exclude>
              <exclude>src/test/data/**/*.pbm</exclude>
              <exclude>src/test/data/**/*.pgm</exclude>
              <exclude>src/test/data/**/*.ppm</exclude>
              <exclude>src/test/data/**/*.xbm</exclude>
              <exclude>src/main/resources/org/apache/commons/imaging/formats/xpm/rgb.txt</exclude>
            </excludes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.11.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle.plugin.version}</version>
        <configuration>
          <configLocation>${basedir}/checkstyle.xml</configLocation>
          <suppressionsLocation>${basedir}/checkstyle-suppressions.xml</suppressionsLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <enableRulesSummary>false</enableRulesSummary>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <!-- Requires setting 'export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m" ' -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <tagListOptions>
            <tagClasses>
              <tagClass>
                <displayName>Needs Work</displayName>
                <tags>
                  <tag>
                    <matchString>TODO</matchString>
                    <matchType>exact</matchType>
                  </tag>
                  <tag>
                    <matchString>FIXME</matchString>
                    <matchType>exact</matchType>
                  </tag>
                  <tag>
                    <matchString>XXX</matchString>
                    <matchType>exact</matchType>
                  </tag>
                </tags>
              </tagClass>
              <tagClass>
                <displayName>Noteable Markers</displayName>
                <tags>
                  <tag>
                    <matchString>NOTE</matchString>
                    <matchType>exact</matchType>
                  </tag>
                  <tag>
                    <matchString>NOPMD</matchString>
                    <matchType>exact</matchType>
                  </tag>
                  <tag>
                    <matchString>NOSONAR</matchString>
                    <matchType>exact</matchType>
                  </tag>
                </tags>
              </tagClass>
            </tagClasses>
          </tagListOptions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>src/test/data/images/xpm/1/symbolic.xpm</exclude>
            <exclude>src/test/data/images/xpm/1/Oregon Scientific DS6639 - DSC_0307 - small.xpm</exclude>
            <exclude>src/test/data/images/pbm/2/5x5-grayscale.pam</exclude>
            <exclude>src/test/data/images/pbm/2/5x5-bw.pam</exclude>
            <exclude>src/test/data/images/pbm/1/Oregon Scientific DS6639 - DSC_0307 - small.pgm</exclude>
            <exclude>src/test/data/images/xbm/1/Oregon Scientific DS6639 - DSC_0307 - small.xbm</exclude>
            <exclude>src/test/data/images/xbm/1/Oregon Scientific DS6639 - DSC_0307 - small X10.xbm</exclude>
            <exclude>src/main/resources/org/apache/commons/imaging/formats/xpm/rgb.txt</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>jdk8-javadoc</id>
      <activation>
        <jdk>[1.8,11)</jdk>
      </activation>
      <properties>
        <additionalparam>-Xdoclint:none</additionalparam>
      </properties>
    </profile>
  </profiles>

  <!-- ====================================================================== -->
  <!-- P E O P L E                                                            -->
  <!-- ====================================================================== -->

  <developers>
    <developer>
      <name>Charles M. Chen</name>
      <id>cmchen</id>
    </developer>
    <developer>
      <name>Philipp Koch</name>
      <id>pkoch</id>
    </developer>
    <developer>
      <name>Jeremias Maerki</name>
      <id>jeremias</id>
    </developer>
    <developer>
      <name>Craig Russell</name>
      <id>clr</id>
    </developer>
    <developer>
      <name>Yoav Shapira</name>
      <id>yoavs</id>
    </developer>
    <developer>
      <name>Carsten Ziegeler</name>
      <id>cziegeler</id>
    </developer>
    <developer>
      <name>Damjan Jovanovic</name>
      <id>damjan</id>
    </developer>
    <developer>
      <name>Matt Benson</name>
      <id>mbenson</id>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Adrian Moerchen</name>
    </contributor>
    <contributor>
      <name>Alex Vigdor</name>
    </contributor>
    <contributor>
      <name>Craig Kelly</name>
    </contributor>
    <contributor>
      <name>Gary Lucas</name>
    </contributor>
    <contributor>
      <name>Gavin Shiels</name>
    </contributor>
    <contributor>
      <name>Peter Royal</name>
    </contributor>
    <contributor>
      <name>Piyush Kapoor</name>
    </contributor>
    <contributor>
      <name>Tars Joris</name>
    </contributor>
    <contributor>
      <name>VVD</name>
    </contributor>
  </contributors>
</project>
